--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -1,4 +1,4 @@
-CXX := ~/hdf5test/bin/h5c++
+CXX := h5c++
 
 PLATFORM := $(shell uname)
 COMPILER := $(shell ($(CXX) -v 2>&1) | tr A-Z a-z )
@@ -18,9 +18,15 @@ CPPFLAGS = -Wall -Wextra -std=c++11 -pedantic -I. $(OPT)
 
 test: tree.o test_su.cpp biom.o unifrac.o
 	$(CXX) $(CPPFLAGS) -Wno-unused-parameter test_su.cpp -o test_su tree.o biom.o unifrac.o 
+	./test_su
 
-main: tree.o biom.o unifrac.o
-	$(CXX) $(CPPFLAGS) su.cpp -o su tree.o biom.o unifrac.o
+main: tree.o biom.o unifrac.o cmd.o
+	$(CXX) $(CPPFLAGS) su.cpp -o su tree.o biom.o unifrac.o cmd.o
+	cp su ../
+
+ocltest: opencl.o
+	clang++ -framework OpenCL opencl.cpp -c
+	clang++ -framework OpenCL opencltest.cpp opencl.o -o opencltest
 
 %.o: %.cpp %.hpp
 	$(CXX) $(CPPFLAGS) -c $< -o $@
