--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,15 @@ install:
   - conda create --yes -n test-env python=$PYTHON_VERSION nose flake8
   - source activate test-env
   - conda install --yes -c bioconda biom-format scikit-bio
-  - pip install https://github.com/qiime2/qiime2/archive/master.zip https://github.com/qiime2/q2-types/archive/master.zip https://github.com/qiime2/q2cli/archive/master.zip
+  - pip install https://github.com/qiime2/qiime2/archive/master.zip https://github.com/qiime2/q2-types/archive/master.zip https://github.com/qiime2/q2cli/archive/master.zip https://github.com/qiime2/q2-diversity/archive/master.zip
   - git clone https://github.com/qiime2/q2lint
   - pushd sucpp; make main; popd
-  - export PATH=`pwd`:$PATH
+  - sudo cp ssu /usr/bin/
   - pip install . 
 script:
   - pushd; make test; popd;
   - flake8 q2_state_unifrac setup.py
   - python q2lint/q2lint.py
-  - qiime state-unifrac unweighted --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix result.qza
+  - qiime state-unifrac unweighted --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix ssu_result.qza
+  - qiime diversity beta_phylogenetic --p-method unweighted_unifrac --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix sk_result.qza
+  - python compare_dms.py ssu_result.qza sk_result.qza
