--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ install:
   - git clone https://github.com/qiime2/q2lint
   - pip install . 
 script:
-  - pushd; make test; popd;
+  - pushd sucpp; make test; popd;
   - flake8 q2_state_unifrac setup.py
   - python q2lint/q2lint.py
   - qiime state-unifrac unweighted --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix ssu_result.qza
-  - qiime diversity beta_phylogenetic --p-method unweighted_unifrac --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix sk_result.qza
+  - qiime diversity beta-phylogenetic --p-method unweighted_unifrac --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix sk_result.qza
   - python compare_dms.py ssu_result.qza sk_result.qza
