--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - git clone https://github.com/qiime2/q2lint
   - pip install . 
 script:
-  - ./sucpp/test_su
+  - pushd sucpp; ./test_su; popd
   - flake8 q2_state_unifrac setup.py
   - python q2lint/q2lint.py
   - qiime state-unifrac unweighted --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix ssu_result.qza
