--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script:
   - pushd sucpp; ./test_su; popd
   - flake8 q2_state_unifrac setup.py
   - python q2lint/q2lint.py
-  - qiime state-unifrac unweighted --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix ssu_result.qza
+  - ssu
+  - qiime state-unifrac unweighted --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix ssu_result.qza --verbose
   - qiime diversity beta-phylogenetic --p-metric unweighted_unifrac --i-table table.qza --i-phylogeny tree.qza --o-distance-matrix sk_result.qza
   - python compare_dms.py ssu_result.qza sk_result.qza
