--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ install:
   - conda install --yes -c bioconda biom-format scikit-bio
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge hdf5 h5py
+  - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
+  - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
   - pip install https://github.com/qiime2/qiime2/archive/2017.4.0.zip https://github.com/qiime2/q2-types/archive/2017.4.0.zip https://github.com/qiime2/q2cli/archive/2017.4.0.zip http://github.com/qiime2/q2templates/archive/2017.4.0.zip https://github.com/qiime2/q2-feature-table/archive/2017.4.0.zip https://github.com/qiime2/q2-diversity/archive/2017.4.0.zip
   - git clone https://github.com/qiime2/q2lint
   - pip install . 
