Not sure if it's compiling

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ install:
   - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
   - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
   - git clone https://github.com/qiime2/q2lint
-  - pip install . 
+  - pip install .
+  - pushd sucpp; make test; make main; popd 
 script:
   - ulimit -c unlimited -S
   - pushd sucpp; ./test_su; popd
