q2lint, and usage string

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,14 +31,14 @@ install:
   - conda install --yes flake8 nose
   - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
   - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
-  - git clone https://github.com/qiime2/q2lint
+  - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
   - pip install .
   - pushd sucpp; make test; make main; popd 
 script:
   - ulimit -c unlimited -S
   - pushd sucpp; ./test_su; popd
   - flake8 q2_state_unifrac setup.py
-  - python q2lint/q2lint.py
+  - q2lint
   - ./sucpp/ssu
   - for i in $(find ./ -maxdepth 1 -name 'core*' -print); do gdb $(pwd)/sucpp/ssu core* -ex "thread apply all bt" -ex "set pagination 0" -batch; done;
   - ls -lrt
