--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ install:
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge hdf5 h5py cython
   - conda install --yes flake8 nose
+  - ls /home/travis/miniconda3/envs/test-env/lib/*hdf*
   - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
   - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
   - export CC=`which h5c++`
