Seems to work on both osx and linux now

--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -18,8 +18,10 @@ CPPFLAGS = -Wall -Wextra -std=c++11 -pedantic -I. $(OPT) -mfma -march=native -fP
 
 ifeq ($(PLATFORM),Darwin)
 	AVX2 := $(shell sysctl -a | grep -c AVX2)
+	LDDFLAGS = -dynamiclib -install_name @rpath${CONDA_PREFIX}/lib/libssu.so
 else
 	AVX2 := $(shell grep "^flags" /proc/cpuinfo | head -n 1 | grep -c avx2)
+	LDDFLAGS = -shared
 endif
 
 ifeq ($(AVX2),1)
@@ -37,7 +39,7 @@ main: tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o
 
 api: tree.o biom.o unifrac.o cmd.o unifrac_task.o
 	$(CXX) $(CPPFLAGS) api.cpp -c -o api.o -fPIC
-	$(CXX) -dynamiclib -install_name @rpath${CONDA_PREFIX}/lib/libssu.so -o libssu.so tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o -lc -lhdf5_cpp
+	$(CXX) $(LDDFLAGS) -o libssu.so tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o -lc -lhdf5_cpp
 	cp libssu.so ${CONDA_PREFIX}/lib/
 
 %.o: %.cpp %.hpp
