--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
      else
         pip install . || travis_terminate 1;
      fi'
-  - pushd sucpp; make test; make main; make api; popd 
+  - pushd sucpp; make test; make main; make api; make capi_test; popd 
 script:
   - ulimit -c unlimited -S
   - pushd sucpp; ./test_su; popd
