--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ addons:
     packages:
       - gdb
       - apport
+      - libhdf5-serial-dev
+
 language: python
 
 compiler:
   - gcc
-
 
 env:
   - PYTHON_VERSION=3.5 EDITABLE_PIP=1
@@ -28,10 +29,11 @@ install:
   - conda create -n test-env --file https://data.qiime2.org/distro/core/qiime2-2017.5-conda-linux-64.txt python=$PYTHON_VERSION
   - source activate test-env
   # needed for the hdf5 dev tools
-  - conda install --yes -c conda-forge hdf5 h5py
+  - conda install --yes -c conda-forge cython
   - conda install --yes flake8 nose
   - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
   - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
+  - export CC=`which h5c++`
   - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
@@ -39,7 +41,7 @@ install:
      else
         pip install . || travis_terminate 1;
      fi'
-  - pushd sucpp; make test; make main; popd 
+  - pushd sucpp; make test; make main; make api; make capi_test; popd 
 script:
   - ulimit -c unlimited -S
   - pushd sucpp; ./test_su; popd
