--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
     packages:
       - gdb
       - apport
+      - libhdf5-serial-dev
 
 language: python
 
@@ -25,11 +26,11 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  - conda create -y -n test-env -c conda-forge -c biocore --file ci/linux-64.txt python=$PYTHON_VERSION
-  - source activate test-env
   - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
   - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
   - export CC=`which h5c++`
+  - conda create -y -n test-env -c conda-forge -c biocore --file ci/linux-64.txt python=$PYTHON_VERSION
+  - source activate test-env
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
         pip install -e . || travis_terminate 1;
