--- a/.travis.yml
+++ b/.travis.yml
@@ -50,4 +50,4 @@ script:
   - ./sucpp/ssu
   # santiy test io
   - ./sucpp/ssu -i unifrac/tests/data/crawford.biom -t unifrac/tests/data/crawford.tre -o test.dm -m unweighted -n 2
-  - python -c "import skbio; dm = skbio.read('test.dm')"
+  - python -c "import skbio; dm = skbio.DistanceMatrix.read('test.dm')"
