might be ready to submit a pull request

--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -37,6 +37,18 @@ test: tree.o test_su.cpp biom.o unifrac.o unifrac_task.o api.o
 main: tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o
 	$(CXX) $(CPPFLAGS) su.cpp -o ssu tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o -lhdf5_cpp 
 
+rapi_test: tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o
+	mkdir -p ~/.R
+	if [ -a ~/.R/Makevars ] ; \
+	then \
+		echo "WARNING: OVERWRITING ~/.R/Makevars" ; \
+		cp ~/.R/Makevars Makevars-original ; \
+	fi;
+	echo CXX1X=h5c++ > ~/.R/Makevars
+	echo CXX=h5c++ >> ~/.R/Makevars 
+	echo CC=h5c++ >> ~/.R/Makevars
+	Rscript test_su_R.R
+	
 api: tree.o biom.o unifrac.o cmd.o unifrac_task.o
 	$(CXX) $(CPPFLAGS) api.cpp -c -o api.o -fPIC
 	$(CXX) $(LDDFLAGS) -o libssu.so tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o -lc 
