more file path rearranging

--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -52,7 +52,7 @@ rapi_test: tree.o biom.o unifrac.o cmd.o unifrac_task.o api.o
 	echo CXX1X=h5c++ > ~/.R/Makevars
 	echo CXX=h5c++ >> ~/.R/Makevars 
 	echo CC=h5c++ >> ~/.R/Makevars
-	Rscript rapi_test.R
+	Rscript R_interface/rapi_test.R
 	
 api: tree.o biom.o unifrac.o cmd.o unifrac_task.o
 	$(CXX) $(CPPFLAGS) api.cpp -c -o api.o -fPIC
