--- a/.travis.yml
+++ b/.travis.yml
@@ -53,5 +53,5 @@ script:
   - flake8 unifrac setup.py
   - ./sucpp/ssu
   # santiy test io
-  - ./sucpp/ssu -i unifrac/tests/data/crawford.biom -t unifrac/tests/data/crawford.tre -o test.dm -m unweighted -n 2
-  - python -c "import skbio; dm = skbio.DistanceMatrix.read('test.dm')"
+  - ./sucpp/ssu -i unifrac/tests/data/crawford.biom -t unifrac/tests/data/crawford.tre -o ci/test.dm -m unweighted -n 2
+  - python -c "import skbio; dm = skbio.DistanceMatrix.read('ci/test.dm')"
