--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ install:
   # it is unclear why at this time.
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-linux-conda.yml -O environment.yml; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-osx-conda.yml -O environment.yml; fi
-  - conda create -n test-env --file environment.yml python=$PTYHON_VERSION
+  - conda env create -n test-env --file environment.yml python=$PTYHON_VERSION
   - source activate test-env
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython
