--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ addons:
       - libhdf5-serial-dev
 
 language: 
-  - python
   - r
 
 os:
@@ -21,8 +20,8 @@ compiler:
   - gcc
 
 env:
-  - CONDA_PY=3.6 EDITABLE_PIP=1
-  - CONDA_PY=3.6 EDITABLE_PIP=0
+  - CONDA_PY=3.5 EDITABLE_PIP=1
+  - CONDA_PY=3.5 EDITABLE_PIP=0
 before_install:
  # https://github.com/springmeyer/travis-coredump/blob/master/.travis.yml
   - ulimit -c
@@ -39,7 +38,7 @@ install:
   # it is unclear why at this time.
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-linux-conda.yml -O environment.yml; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-osx-conda.yml -O environment.yml; fi
-  - conda env create -n test-env --file environment.yml python=$PTYHON_VERSION
+  - conda env create -n test-env --file environment.yml
   - source activate test-env
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython
