--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ compiler:
   - gcc
 
 env:
-  - CONDA_PY=3.5 EDITABLE_PIP=1
-  - CONDA_PY=3.5 EDITABLE_PIP=0
+  - CONDA_PY=3.6 EDITABLE_PIP=1
+  - CONDA_PY=3.6 EDITABLE_PIP=0
 before_install:
  # https://github.com/springmeyer/travis-coredump/blob/master/.travis.yml
   - ulimit -c
@@ -30,15 +30,16 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O miniconda.sh; fi
   - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda3/bin:$PATH
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
   - conda update --yes conda
 install:
   # linking against libhdf5_cpp fails right now if we do not use this conda environment.
   # it is unclear why at this time.
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-linux-conda.yml -O environment.yml; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-osx-conda.yml -O environment.yml; fi
-  - conda env create -n test-env --file environment.yml
+  - conda env create -n test-env --file environment.yml python=$CONDA_PY
   - source activate test-env
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython
