--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,10 @@ install:
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython
   - conda install --yes flake8 nose
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sed -i '' 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sed -i '' 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++` && echo "BASE"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++` && echo $ "LINKERBASE"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sed -i '' 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++` && echo "BASE"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sed -i '' 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++` && echo "LINKERBASE"; fi
   - export CC=`which h5c++`
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
