--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ before_install:
 install:
   # linking against libhdf5_cpp fails right now if we do not use this conda environment.
   # it is unclear why at this time.
-  - conda create -n test-env --file https://raw.githubusercontent.com/qiime2/environment-files/master/2019.4/release/qiime2-2019.4-py36-linux-conda.yml python=$PYTHON_VERSION
+  - wget https://raw.githubusercontent.com/qiime2/environment-files/master/2019.4/release/qiime2-2019.4-py36-linux-conda.yml -O environment.yml
+  - conda env create -n test-env --file environment.yml python=$PYTHON_VERSION
   - source activate test-env
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython
