print number of available cores

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,8 @@ script:
   - nosetests
   - flake8 unifrac setup.py
   - ./sucpp/ssu
+  # check number of available cpus
+  - python -c "import os; print(os.cpu_count())"
   # santiy test io
   - ./sucpp/ssu -i unifrac/tests/data/crawford.biom -t unifrac/tests/data/crawford.tre -o ci/test.dm -m unweighted -n 2
   - python -c "import skbio; dm = skbio.DistanceMatrix.read('ci/test.dm')"
