added directory info to h5c++

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
   - export CC=`which h5c++`
   - python3-config --cflags
   - clang -v
-  - h5c++ -DNDEBUG -D_FORTIFY_SOURCE=2 -O2 -mfma -march=native -Wall -Wextra -std=c++11 -pedantic -I. -O4 -fPIC -c tree.cpp -o tree.o
+  - h5c++ -DNDEBUG -D_FORTIFY_SOURCE=2 -O2 -mfma -march=native -Wall -Wextra -std=c++11 -pedantic -I. -O4 -fPIC -c sucpp/tree.cpp -o sucpp/tree.o
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
         pip install -e . || travis_terminate 1;
